# genrejinn

./: .gitignore  build_parser.py  custom_parser.py  epub_parser.py  highlights.pkl  link_test.py  marks.pkl  requirements.txt  tree_sitter_parser.py
dev/: README.md
genrejinn-react/: CLAUDE.md  package-lock.json  package.json  server.js
genrejinn-react/data/: marks.json  notes.json  reading-progress.json
genrejinn-react/public/: gravitys-rainbow.epub
genrejinn-react/src/: App.js
genrejinn-react/src/colors/: akira.js
genrejinn-textual/: epub_parser.py  main.py  pyproject.toml  requirements.txt
genrejinn-textual/dev/: build_grammar.py  test_image.py
genrejinn-textual/grammar/: grammar.js  package-lock.json
genrejinn-textual/grammar/queries/: highlights.scm
genrejinn-textual/grammar/src/: node-types.json
genrejinn-textual/src/genrejinn/: __init__.py  app.py  main.py
genrejinn-textual/src/genrejinn/epub/: __init__.py  pagination.py  parser.py
genrejinn-textual/src/genrejinn/highlighting/: __init__.py  colors.py  manager.py  tree_sitter.py
genrejinn-textual/src/genrejinn/storage/: __init__.py  highlights.py  images.py  marks.py  page_state.py
genrejinn-textual/src/genrejinn/ui/: __init__.py  layout.py  themes.py  widgets.py
genrejinn-textual/src/genrejinn/utils/: __init__.py  debug.py  search.py  server.py
genrejinn-textual/syntax/grammars/custom/: grammar.js
genrejinn-textual/syntax/grammars/custom/queries/: highlights.scm
syntax/: __init__.py  custom_language.py  manager.py
tree-sitter-custom/: grammar.js  package.json
tree-sitter-custom/queries/: highlights.scm
tree-sitter-custom/src/: grammar.json  node-types.json  parser.c
